--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -41,6 +41,12 @@ body {
     --sidebar-accent-foreground: 240 5.9% 10%;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --gallery-background: 200, 12%, 95%;
+    --separator: 0, 0%, 83%;
+    --contrast: 0, 0%, 100%;
+    --document-background: 220, 43%, 99%;
+    --document-editor: 210, 50%, 98%;
+    --document-hover: 0 0% 80% / 0.8;
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -75,6 +81,12 @@ body {
     --sidebar-accent-foreground: 240 4.8% 95.9%;
     --sidebar-border: 240 3.7% 15.9%;
     --sidebar-ring: 217.2 91.2% 59.8%;
+    --gallery-background: 0 0% 10%;
+    --separator: 0, 0%, 17%;
+    --contrast: 0, 0%, 0%;
+    --document-background: 220 43% 1%;
+    --document-editor: 210 50% 2%;
+    --document-hover: 0 0% 20% / 0.8;
   }
 }
 
@@ -303,4 +315,8 @@ body {
 
 div[data-radix-popper-content-wrapper] {
   z-index: 50 !important;
+}
+
+.dark .lb-root {
+  --lb-background: #010204;
 }
